--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.NFC" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <uses-feature
         android:name="android.nfc"
@@ -54,7 +55,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.contacts.ContactSettings"></activity>
+        <activity android:name=".ui.contacts.ContactSettings"></activity>ù
+        <activity android:name=".ui.contacts.AddContactActivity" />
         <activity android:name=".ui.edit.EditUserDataActivity"></activity>
     </application>
 
