Implemented location update, DND and DNDMAW

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,7 @@
         <activity android:name=".ui.home.HomeSettings" />
 
         <service android:name=".time.DNDService" />
+        <service android:name=".map.MapService" />
     </application>
 
 </manifest>
